--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "main": "electron/dist/main.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "npx next dev",
+    "build": "npx next build",
+    "start": "npx next start",
     "lint": "eslint",
     "build-electron": "tsc electron/main.ts --outDir electron/dist --esModuleInterop && tsc electron/preload.ts --outDir electron/dist --esModuleInterop",
     "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"npm run build-electron && wait-on http://localhost:3000 && cross-env NODE_ENV=development electron .\"",
@@ -51,9 +51,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-log": "^5.4.3",
+    "electron-serve": "^3.0.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.544.0",
-    "next": "16.0.5",
+    "next": "^16.0.5",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -78,7 +79,7 @@
     "prettier": "^3.7.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5",
+    "typescript": "5.9.3",
     "wait-on": "^9.0.3"
   }
 }
