ADD: Created a deatachable log window and fixing sime build issues

--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -9,8 +9,9 @@
     "start": "npx next start",
     "lint": "eslint",
     "build-electron": "tsc electron/main.ts --outDir electron/dist --esModuleInterop && tsc electron/preload.ts --outDir electron/dist --esModuleInterop",
+    "build-backend": "cd ../backend-engine && venv\\Scripts\\pyinstaller.exe --clean api.spec",
     "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"npm run build-electron && wait-on http://localhost:3000 && cross-env NODE_ENV=development electron .\"",
-    "dist": "npm run build && npm run build-electron && electron-builder"
+    "dist": "npm run build-backend && npm run build && npm run build-electron && electron-builder"
   },
   "build": {
     "appId": "com.autoisp.desktop",
@@ -20,6 +21,7 @@
     },
     "files": [
       "electron/dist/**/*",
+      "electron/loading.html",
       "out/**/*",
       "package.json"
     ],
