--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -22,6 +22,7 @@
     "files": [
       "electron/dist/**/*",
       "electron/loading.html",
+      "public/**/*",
       "out/**/*",
       "package.json"
     ],
@@ -32,7 +33,8 @@
       }
     ],
     "win": {
-      "target": "nsis"
+      "target": "nsis",
+      "icon": "build/icon.ico"
     }
   },
   "dependencies": {
