UPDATE: added status filter

--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -34,7 +34,7 @@
     ],
     "win": {
       "target": "nsis",
-      "icon": "build/icon.ico"
+      "icon": "app/favicon.ico"
     }
   },
   "dependencies": {
