--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -59,6 +59,7 @@
     "date-fns": "^4.1.0",
     "electron-log": "^5.4.3",
     "electron-serve": "^3.0.0",
+    "electron-updater": "^6.7.3",
     "formik": "^2.4.6",
     "lucide-react": "^0.544.0",
     "next": "^16.0.5",
